fixed some text alignment

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ hr {
 
 .introduction-section h1 {
   font-size: clamp(2rem, 6vw, 6rem);
-  text-align: center;
+
   font-weight: 500;
 }
 
@@ -407,6 +407,10 @@ footer {
   .introduction-section {
     grid-template-columns: 1fr;
     gap: 2rem;
+  }
+
+  .introduction-section h1 {
+    text-align: center;
   }
 
   .introduction-photos {
